@@ -1,1 +1,1 @@
-#define E2RETRIEVE_VERSION "20040524"
+#define E2RETRIEVE_VERSION "20040815"
